--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,11 @@
     ],
     "host_permissions": [
         "<all_urls>"
+    ],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["script2.js"]
+        }
     ]
 }
