--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
         }
     },
     "background": {
-        "service_worker": "sw2.js"
+        "service_worker": "sw.js"
     },
     "permissions": [
         "webRequest",
@@ -24,7 +24,7 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["script2.js"]
+            "js": ["content-script.js"]
         }
     ]
 }
