--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
     "manifest_version": 3,
     "name": "WordPress Theme and Plugin Detector",
+    "description": "Detect WordPress Themes and Plugins as you browse!",
     "version": "1.0",
+    "icons": {
+        "16": "icon-16.png",
+        "48": "icon-48.png",
+        "128": "icon-128.png"
+    },
     "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "icon-16.png",
-            "48": "icon-48.png",
-            "128": "icon-128.png"
-        }
+        "default_popup": "popup.html"
     },
     "background": {
         "service_worker": "service-worker.js"
     },
     "permissions": [
-        "webRequest",
         "tabs",
         "activeTab"
     ],
